# LatticeDB-NextGen-DBMS

./: .clang-format  .gitattributes  .gitignore  .travis.yml  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CITATION.cff  CMakeLists.txt  DEPLOYMENT.md  DESIGN.md  Dockerfile  Jenkinsfile  MONITORING.md  README.md  cli_main.cpp  docker-compose.yml  index.html  latticedb.db  serve-wiki.sh  server_main.cpp  test.db  test2.db  test3.db  test_basic_features.sql  test_sql_features.sql  test_working_features.sql
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
aws/: Dockerfile.aws  README.md  deploy.sh  main.tf  monitoring-variables.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf
aws/config/: prometheus.yml
aws/scripts/: blue-green-deploy.sh  build-and-push.sh  canary-deploy.sh  manage-service.sh  setup-aws-cli.sh
azure/: Dockerfile.azure  README.md  deploy.sh  main.tf  monitoring-variables.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf
benchmarks/: benchmark_main.cpp
build-container/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  comprehensive_test  latticedb  latticedb_bench  latticedb_server  latticedb_shell  latticedb_test  test_direct
build-test/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  test_direct
build_freebsd-amd64/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  latticedb  latticedb_bench  latticedb_shell
build_host/: .ninja_deps  .ninja_log  CTestTestfile.cmake  Makefile  build.ninja  build_info.h  comprehensive_test  latticedb  latticedb_bench  latticedb_server  latticedb_test
build_linux-arm64/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  comprehensive_test  latticedb_server
build_linux-x86_64/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja
build_macos-arm64/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  latticedb_test
build_macos-x86_64/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  build_info.h
build_test/: .ninja_deps  .ninja_log  CTestTestfile.cmake  Makefile  build.ninja  build_info.h  latticedb  latticedb_bench  latticedb_server  latticedb_test
config/feature-flags/: flags.yaml
config/grafana/: deployment-dashboard.json
config/prometheus/: deployment-rules.yaml
config/resilience/: circuit-breaker.yaml  rate-limiting.yaml
docs/: DEPLOYMENT_PLAYBOOKS.md  DEPLOYMENT_RUNBOOK.md  DEVOPS_OVERVIEW.md
environments/: README.md  deploy.sh
environments/dev/: aws.tfvars  azure.tfvars  docker-compose.yml  gcp.tfvars  hashicorp.tfvars  init.sql  otel-collector.yml  prometheus.yml
environments/prod/: aws.tfvars  azure.tfvars  docker-compose.yml  gcp.tfvars  hashicorp.tfvars
environments/staging/: aws.tfvars  azure.tfvars  docker-compose.yml  gcp.tfvars  hashicorp.tfvars
examples/: comprehensive_demo.sql  latticedb.db  run_demo.sh  simple_demo.sql  test_direct.cpp
gcp/: Dockerfile.gcp  README.md  deploy.sh  main.tf  monitoring-variables.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf
gcp/config/: prometheus.yml
gcp/monitoring/: dashboard.json.tpl
gui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
gui/src/: App.tsx  Settings.tsx  main.tsx  store.ts  styles.css
hashicorp/: Dockerfile.hashicorp  README.md  deploy.sh
hashicorp/consul/: acl-policies.hcl  connect.hcl  services.json
hashicorp/monitoring/: grafana-dashboard.json  nomad-monitoring.hcl  prometheus.yml
hashicorp/nomad/: latticedb.nomad.hcl
hashicorp/scripts/: check-health.sh
hashicorp/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
hashicorp/vault/: policies.hcl  setup-vault.sh
nginx/: resilience.conf
run-tests/: comprehensive_test.cpp
scripts/: asan_ubsan.sh  bench.sh  build.sh  build_debug.sh  dev_run_all.sh  format.sh  gen_testdata.sh  lint.sh  progressive-delivery.sh  regen_expected.sh  run_smoke.sh  test.sh
scripts/chaos/: chaos-experiments.yaml  chaos-monkey.sh
scripts/feature-flags/: manage-flags.sh
scripts/shared/: deploy-multi-cloud.sh  health-check.sh
scripts/validation/: deployment-validator.sh  post-deployment-checks.sh  pre-flight-checks.sh  smoke-tests.sh
src/: catalog.h  crdt.h  dp.h  engine.h  executor.cpp  executor.h  http_server.cpp  http_server.h  main.cpp  sql_parser.cpp  sql_parser.h  storage.cpp  storage.h  util.h  vector.h
src/buffer/: buffer_pool_manager.cpp  buffer_pool_manager.h  replacer.cpp  replacer.h
src/catalog/: catalog_manager.cpp  catalog_manager.h  constraint_manager.cpp  constraint_manager.h  table_heap.cpp  table_heap.h
src/common/: config.h  error_manager.h  exception.cpp  exception.h  logger.cpp  logger.h  result.h
src/compression/: compression_engine.cpp  compression_engine.h
src/concurrency/: lock_manager.cpp  lock_manager.h
src/diagnostics/: system_info.cpp  system_info.h
src/engine/: database_engine.cpp  database_engine.h  storage_engine.cpp  storage_engine.h
src/index/: b_plus_tree.cpp  b_plus_tree.h  b_plus_tree_page.cpp  b_plus_tree_page.h  index_iterator.cpp  index_iterator.h
src/ml/: vector_search.cpp  vector_search.h
src/network/: server.cpp  server.h
src/optimizer/: advanced_optimizer.cpp  advanced_optimizer.h
src/query/: query_executor.cpp  query_executor.h  query_planner.cpp  query_planner.h  sql_parser.cpp  sql_parser.h
src/recovery/: log_manager.cpp  log_manager.h  recovery_manager.cpp  recovery_manager.h
src/security/: security_manager.cpp  security_manager.h  sql_sanitizer.cpp  sql_sanitizer.h
src/statistics/: table_statistics.cpp  table_statistics.h
src/storage/: disk_manager.cpp  disk_manager.h  page.cpp  page.h  table_page.cpp  table_page.h
src/stream/: stream_processor.cpp  stream_processor.h
test/: vector_test.cpp
tests/: b_plus_tree_test.cpp  buffer_pool_test.cpp  compression_test.cpp  run_all.sh  security_test.cpp  smoke.sql  storage_test.cpp  stream_processing_test.cpp  test_main.cpp  transaction_test.cpp  vector_search_test.cpp
(+63 files in other folders)
